Updating unit movement selection

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -40,11 +40,16 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\end{figure} \\
 	\indent In a normal view, the user will have a very small glimpse of the minimap, as pictured above. It will show their current camera view on the minimap, and a very small representation of unit locations and map. To conquer the issue of screen space, a tap gesture will be employed on the minimap. When a user taps the minimap once, it will cause the minimap to go full screen. This minimap will allow the user to see a bigger, ``computer-sized'' minimap as opposed to providing a static, small minimap that is close to useless anyways. This will allow a user to see everything going on, and their current camera location behind the overlay. To exit the enlarged minimap, the user will have two options. They can either close the enlarged minimap by selecting outside of the overlay to dismiss. The other option would be to select an area of the map where they would like the camera to snap to. This will allow for the snap-to-location camera functionality that PC RTS gamers have, while scaling the experience to work within the confines of screen space and touchscreen input.
 	\subsection{Unit Movement}
-	Now that unit selection and the minimap interface has been explained, unit movement is based off of a lot of the same principles. After successfully selecting units on the map, you can use either the minimap overlay or within your camera view to move your units. With a tap using either of those methods, your units will be able to move. This will allow unit movement to be simple and easy to remember. After a tap, while units are moving, holding a tap in a different location will allow a user to chain movement commands together, much like Shift + Right Click in Starcraft II.\\
-	%	Show a Starcraft II example image below.
+	Now that unit selection and the minimap interface has been explained, unit movement is based off of many of the same principles. After successfully selecting units on the map, you can use either the minimap overlay or within your camera view to move your units. With a tap using either of those methods, your units will be able to move. This will allow unit movement to be simple and easy to remember. After a tap, while units are moving, holding a tap in a different location will allow a user to chain movement commands together, much like Shift + Right Click in Starcraft II.\\
+	\begin{figure}[h]
+	\begin{center}
+	\includegraphics[height = 2.5in]{sc2-movement-queue}
+	\caption{An example of queued movement in Starcraft II. Shift + Right Click allows for units to chain together movement, and draws a path to the next movement point.}
+	\end{center}
+	\end{figure} \\
 	%	TODO: Add information about selecting minimap camera view without moving,
 	%	      or even attacking instead.
-	\indent To attack either a group of units or a base, a single tap on the enemy object will cause an attack command to be issued.
+	\indent To attack either a group of units or a base, a double tap on the enemy object will cause an attack command to be issued. In addition, double-tapping on an area in the minimap view will issue the attack-move command, meaning that if any enemies are encountered along that path, the user's units will attack. This is, in some ways, an extra option; developers will already have their units attack automatically when enemies are within a certain range, but it is definitely useful to the hardcore real-time strategy community. In addition, if an attack-move command is issued and users hold-tap to queue, it will queue up attack move commands.
 	\subsection{Camera Control}
 	For camera control, I took inspiration from both iOS and Android Design paradigms. Pinching with two fingers outward will allow the user to zoom in on their current view, and conversely, inward would allow the user to zoom out. It seemed natural to use this in the control scheme so that users would not becomed confused when a two-finger pinch causes a different action to happen, such as a unit selection box. \\
 	\indent In addition, camera rotation is essential for users playing a real-time strategy game. A user needs to be able to see from a different direction than just a fixed north; therefore, the user needs intutitive controls to dynamically adjust to the situation. Once again looking at universal gestures in the mobile OS, I took a page from Google Maps' two finger rotate to view at any angle. This will allow the user to adjust the camera's direction quickly and effectively.
@@ -81,8 +86,9 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
 \section{Usability Analysis}
 	\subsection{Learnability}
-	I believe that time for learnability will be incredibly low utilizing this interface design. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control.
+	I believe that time for learnability will be easy utilizing this interface design, and the time it would take to learn would be low. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control.
 	\subsection{Efficiency}
+	Efficiency will be another strong point of this user interface. The goal of the interface was to simplify the amount of actions that would be needed to get units to move/interact/etc. to no more than two touches. 
 	\subsection{Rate of Errors}
 	\subsection{Memorability}
 	Memorability will always be a difficult area, and not just because of a user interface. Real-time strategy games demand a mastery of a control scheme, map layout, and the core gameplay strategy to win. This is what has made this genre of game competitive even before the computer (chess is one notable example). Nevertheless, since I believe that simplifying the interface and standardizing task interfaces will cut down on the time it takes to memorize commands. If users already know how to use their mobile devices with a standardized set of guidelines that most developers conform to, this will as well. That's why I believe that even though memorability will be difficult due to the complexity of some real-time strategy games, my interface will allow the time to at least be reduced in memorizing movements and commands.
