--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -60,7 +60,6 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\caption{An example of what a building interface will look like when a user selects a building. Pictured here is the Android Jellybean Camera interface, tilted 90 degrees to the left. An interface similar to this one will be overlayed on top of the selected building on unit tap.}
 	\end{center}
 	\end{figure}
-	%	TODO: Add photo of Android Jellybean Camera interface. Note that implementation is similar, just flipped 90º.
 	For building management, my goal was to make it easy for players to be able to queue up units and research while still maintaining a touchscreen design. In otherwards, I wanted users to be able to quickly see at a glance what's going on quickly with each of their different buildings. I found inspiration in the Stock Android Camera interface, where users hold their finger down and a fanned-out circle appears from their finger. This allows users to toggle different cameras, enable HDR, or even change white balance. Using a similar technique, instead of holding down their finger on a building, when a user taps a building a similar fan-like circle appears around it. \\
 	\indent A good illustration of how this will look would be to imagine a barracks with three unit types: a soldier, an anti-infantry unit, and some other special unit. Each unit would be displayed on the right side of the fan, with a unit count next to the pictorial designation of what type of unit they are. Each little fan section, when soldiers are being queued to be built, will fill with a color as units are trained. On the left side of the fan is where upgrades will be applied to certain units. \\
 	\indent This illustration above is an example of the adaptive interface that this fan will provide on a building. For my design, if a developer wants to create a building type, unit creation will be on the right according to my design guidelines, and research will always be on the left. The only exception to this rule will be if the building itself is for research only, or if it is some special type of building used for only resource collection, etc. The interface adapts to the many different ideas that developers have, while providing them guidelines on how to organize their building tasks.
@@ -69,8 +68,7 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	In its simplest form, this is the reason why this interface was designed: to create a simple and easily controllable interface for a developer to design a game within. According to critics, the difficulties that real-time strategy games have always faced outside of the traditional PC market is lacking a mouse and keyboard. My entire interface design is not only to prove these critics wrong, but also to show that the reason for a lacking RTS market outside of personal computers is because developers have implemented a poor user interface and control system for the user. \\
 	\indent The type of real-time strategy that can be implemented using this interface design and layout is pretty endless. While many tower-defense RTS games have already found success on the market due to a time-lapse between tower creation, there are many other genres of real-time strategy that will benefit from this interface. In addition, this usage scenario need not apply to only one device; the interface is designed to be dynamic, regardless of screen size, buttons, etc. This is due to the universal importance of the touchscreen to smartphones; almost all modern smartphones have a touchscreen interface, which means using this interaction style will be seamless and simple for today's devices.
 	\subsection{Companion App: RTS/FPS Hybrid between Console/PC and Mobile Devices}
-	%	TODO: Cite an article on MAG.
-	One unique way this design could be used would be a way to provide a companion app that would enhance the gameplay of a First-Person shooter while also providing a strategy element. This would allow both the mobile companion and the larger console game to be pushed to a much larger scale than ever before. While games like MAG
+	One unique way this design could be used would be a way to provide a companion app that would enhance the gameplay of a First-Person shooter while also providing a strategy element. This would allow both the mobile companion and the larger console game to be pushed to a much larger scale than ever before. For example, there could be 2 Battle Commanders on their mobile devices (pretty close to an Ender's Game scenario). They will be able to interact with the battlefield in a certain way, where they will have control where to move troops. When a confrontation between two squadrons arises, the console players will be pushed into the action to see who can come out on top. This will allow a way for consoles and mobile devices to be companions, and for a fun way to play while on the go. Even on the move, though, there is still a console experience as you control unit movements using commands from the interface.
 \section{Design Rationale}
 	\subsection{Unit Selection}
 	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with Starfront.
