Completed usability analysis section

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -14,6 +14,7 @@
 
 \begin{document}
 \maketitle
+\abstract{Placeholder.}
 \pagebreak
 \section{Introduction}
 In the past few years, mobile operating systems have become a hub for both independent developers and game studios alike to publish video games that their consumers can hold in the palm of their hand. Mobile game development once used to be a frontier; now, it seems as though a new game comes out every few weeks, and they battle for the addiction of their consumers. While many different genres of mobile games have been produced, from tower defense to adventure to even massively multiplayer, real-time strategy remains a genre mostly untouched by mobile game developers. One's initial reaction may be to believe that lack of interest in real-time strategy (or RTS) games is responsible for few games being published in that genre. Nevertheless, as this design will outline, a lack of intuitive controls and user interface has prevented the genre from thriving on mobile. Many developers have been met with interface design challenges. One example of this is a result of lacking hardware devices outside of the touchscreen (such as a mouse and keyboard, or even a controller with buttons). My user design will show how mobile strategy is the future of challenging, yet rewarding mobile gaming. Empowering the users by utilizing every inch of screen is the key foundation to building a successful mobile RTS interface.
@@ -84,11 +85,13 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
 \section{Usability Analysis}
 	\subsection{Learnability}
-	I believe that time for learnability will be easy utilizing this interface design, and the time it would take to learn would be low. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control.
+	I believe that time for learnability will be easy utilizing this interface design, and the time it would take to learn would be low. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control. In addition, there are no more than two tap commands to memorize. Using commands that are similar to how the mobile OS itself is implemented can only increase learnability, as users perform these tasks across the operating system on a day-to-day basis.
 	\subsection{Efficiency}
-	Efficiency will be another strong point of this user interface. The goal of the interface was to simplify the amount of actions that would be needed to get units to move/interact/etc. to no more than two touches. 
+	Efficiency will be another strong point of this user interface. The goal of the interface was to simplify the amount of actions that would be needed to get units to move/interact/etc. to no more than two touches. This means that it takes less time digging through menus and searching for an option. In addition, the building fan interface will make all options available to the user at once, with categorization design guidelines. This can only improve efficiency as they approach memorizing what side represents what.
 	\subsection{Rate of Errors}
+	There is a chance for errors in the interface in a few spots. Looking specifically at the tap gestures, depending on developer implementation there could be rogue touch input that causes units to move where the user does not want them to. A rogue touch could also have the potential to cancel unit movement altogether, which means that their troops will have not responded as the user is under attack. In addition, while designed with smaller screens in mind, a smaller screen means less room to move units on the map and more of a chance to mistap. Since the size of the target location is significantly smaller, Fitts' Law will come into play. Even though the distance will be shorter because of the screen, the tap space will be much smaller which could cause a misregistration of the input, and possibly make it harder for the user to interact.
 	\subsection{Memorability}
 	Memorability will always be a difficult area, and not just because of a user interface. Real-time strategy games demand a mastery of a control scheme, map layout, and the core gameplay strategy to win. This is what has made this genre of game competitive even before the computer (chess is one notable example). Nevertheless, since I believe that simplifying the interface and standardizing task interfaces will cut down on the time it takes to memorize commands. If users already know how to use their mobile devices with a standardized set of guidelines that most developers conform to, this will as well. That's why I believe that even though memorability will be difficult due to the complexity of some real-time strategy games, my interface will allow the time to at least be reduced in memorizing movements and commands.
 	\subsection{Satisfaction}
+	Subjective satisfaction will be hard to measure without running an actual test, but I believe that this implementation will satisfy users. Users crave for a simplicity of interface, one that gets out of the way but also provides the power they need to complete tasks. My goal was to make the interface more dynamic than static, which allows many elements that normally take up screen space to get out of the way. Users will be able to focus more on playing the game than being shot down by an overwrought static interface.
 \end{document}  
