Implementing design rationale

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -48,8 +48,6 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\caption{An example of queued movement in Starcraft II. Shift + Right Click allows for units to chain together movement, and draws a path to the next movement point.}
 	\end{center}
 	\end{figure} \\
-	%	TODO: Add information about selecting minimap camera view without moving,
-	%	      or even attacking instead.
 	\indent To attack either a group of units or a base, a double tap on the enemy object will cause an attack command to be issued. In addition, double-tapping on an area in the minimap view will issue the attack-move command, meaning that if any enemies are encountered along that path, the user's units will attack. This is, in some ways, an extra option; developers will already have their units attack automatically when enemies are within a certain range, but it is definitely useful to the hardcore real-time strategy community. In addition, if an attack-move command is issued and users hold-tap to queue, it will queue up attack move commands.
 	\subsection{Camera Control}
 	For camera control, I took inspiration from both iOS and Android Design paradigms. Pinching with two fingers outward will allow the user to zoom in on their current view, and conversely, inward would allow the user to zoom out. It seemed natural to use this in the control scheme so that users would not becomed confused when a two-finger pinch causes a different action to happen, such as a unit selection box. \\
@@ -72,7 +70,10 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	One unique way this design could be used would be a way to provide a companion app that would enhance the gameplay of a First-Person shooter while also providing a strategy element. This would allow both the mobile companion and the larger console game to be pushed to a much larger scale than ever before. For example, there could be 2 Battle Commanders on their mobile devices (pretty close to an Ender's Game scenario). They will be able to interact with the battlefield in a certain way, where they will have control where to move troops. When a confrontation between two squadrons arises, the console players will be pushed into the action to see who can come out on top. This will allow a way for consoles and mobile devices to be companions, and for a fun way to play while on the go. Even on the move, though, there is still a console experience as you control unit movements using commands from the interface.
 \section{Design Rationale}
 	\subsection{Unit Selection}
-	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with Starfront.
+	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with this approach 
+	\subsection{Minimap}
+	The Minimap Interface was designed to overcome the inefficiency that is proven by Fitts' Law. Since the target of the minimap is too small, some mobile RTS's have attempted to overcome that by drawing a bigger minimap in the top-right corner of the screen. Nevertheless, an issue results from that approach: less room for the user to select objects on the screen, and even to issue movement commands. On top of that, minimap control suffers from the same Fitts' Law issue that was originally trying to be fixed. The selection area for moving the camera view around the map is small, which makes it difficult for accurate camera placement. This is why I chose to add an expandable map interface: it makes the minimap target huge, while at the same time preserving all the action happening on-screen. The advantage of this approach is that it is dynamic as well; in the heat of battle, the user will not have the minimap getting in the way. This will allow the user to be immersed in the action on-screen, while still being alerted (or ``pinged,'' in my interface design language) to other events happening on the smaller minimap.
+	\subsection{Unit Movement}
 	\subsection{Camera Control}
 	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of a webpage in a mobile browser. \\
 	\indent In Starfront, users are provided with a slider on the right side of the interface, which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture.
@@ -83,6 +84,8 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\end{center}
 	\end{figure} \\
 	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
+	\subsection{Building Management \& Interface}
+	For mobile devices, I believe that cluterring up the already limited screen space will only make the user more error-prone as they execute actions. I believe that utilizing my building management interface will limit that error-prone behavior, while providing context to their current action. When a user selects a building, the commands fan-out around the building in a pie-menu fashion, showing the user their selection while displaying actions around it. This provides context to the user in the form of direct manipulation: the user wants to build something, so as they tap a building command options naturally form out of that tap. It provides the distinctive and clear set-up of a menu mental model as well: distinctive and clear choices always are mapped from left to right (research = left, units = right). 
 \section{Usability Analysis}
 	\subsection{Learnability}
 	I believe that time for learnability will be easy utilizing this interface design, and the time it would take to learn would be low. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control. In addition, there are no more than two tap commands to memorize. Using commands that are similar to how the mobile OS itself is implemented can only increase learnability, as users perform these tasks across the operating system on a day-to-day basis.
