--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -70,10 +70,17 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	One unique way this design could be used would be a way to provide a companion app that would enhance the gameplay of a First-Person shooter while also providing a strategy element. This would allow both the mobile companion and the larger console game to be pushed to a much larger scale than ever before. For example, there could be 2 Battle Commanders on their mobile devices (pretty close to an Ender's Game scenario). They will be able to interact with the battlefield in a certain way, where they will have control where to move troops. When a confrontation between two squadrons arises, the console players will be pushed into the action to see who can come out on top. This will allow a way for consoles and mobile devices to be companions, and for a fun way to play while on the go. Even on the move, though, there is still a console experience as you control unit movements using commands from the interface.
 \section{Design Rationale}
 	\subsection{Unit Selection}
+	\begin{figure}[h]
+	\begin{center}
+	\includegraphics[height = 2.5in]{starfront-selection}
+	\caption{An example of unit selection in a mobile RTS, ``Starfront: Collision.'' In this example, a user does a two-finger gesture, with each finger in diagonally opposite corners, to select units.}
+	\end{center}
+	\end{figure}
 	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with this approach is that it directly contradicts the design guidelines of mobile operating systems. While this conforms to the design guidelines of mouse selection on PC, it does not translate well to the mobile experience. This is why I decided to use a radial selection method: a user holds their finger on the screen, and it expands to encompass units over a certain area. It better conforms to the ideas of touch input, while in some cases lacking the direct manipulation users are used to when playing real-time strategy with a mouse and keyboard. Nevertheless, I believe this to be a stronger approach than two-finger select, as it interferes with the guidelines of a mobile OS and will confuse the user expecting the gesture to zoom-in the camera.
 	\subsection{Minimap}
 	The Minimap Interface was designed to overcome the inefficiency that is proven by Fitts' Law. Since the target of the minimap is too small, some mobile RTS's have attempted to overcome that by drawing a bigger minimap in the top-right corner of the screen. Nevertheless, an issue results from that approach: less room for the user to select objects on the screen, and even to issue movement commands. On top of that, minimap control suffers from the same Fitts' Law issue that was originally trying to be fixed. The selection area for moving the camera view around the map is small, which makes it difficult for accurate camera placement. This is why I chose to add an expandable map interface: it makes the minimap target huge, while at the same time preserving all the action happening on-screen. The advantage of this approach is that it is dynamic as well; in the heat of battle, the user will not have the minimap getting in the way. This will allow the user to be immersed in the action on-screen, while still being alerted (or ``pinged,'' in my interface design language) to other events happening on the smaller minimap.
 	\subsection{Unit Movement}
+	For unit movement, the goal setting out was to limit the amount of taps that the user would need to memorize, and provide feedback of what the user's commands were causing to occur. The hold-tap input made sense for chaining commands because it would both provide feedback to the user by drawing a next-movement line and preventing interference from user modification to movement patters. If a user 
 	\subsection{Camera Control}
 	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of a webpage in a mobile browser. \\
 	\indent In Starfront, users are provided with a slider on the right side of the interface, which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture.
