Completed design rationale section, final proofread

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 \maketitle
-\abstract{Placeholder.}
+\abstract{A proposed interface design for how to bring real-time strategy to the mobile gaming scene. I will argue that the biggest challenge to real-time strategy on mobile is a combination of overwrought interface design and poor controls. With a simplified and clean interface combined with intuitive, easy-to-remember controls, it will provide the best possible mobile RTS experience for users.}
 \pagebreak
 \section{Introduction}
 In the past few years, mobile operating systems have become a hub for both independent developers and game studios alike to publish video games that their consumers can hold in the palm of their hand. Mobile game development once used to be a frontier; now, it seems as though a new game comes out every few weeks, and they battle for the addiction of their consumers. While many different genres of mobile games have been produced, from tower defense to adventure to even massively multiplayer, real-time strategy remains a genre mostly untouched by mobile game developers. One's initial reaction may be to believe that lack of interest in real-time strategy (or RTS) games is responsible for few games being published in that genre. Nevertheless, as this design will outline, a lack of intuitive controls and user interface has prevented the genre from thriving on mobile. Many developers have been met with interface design challenges. One example of this is a result of lacking hardware devices outside of the touchscreen (such as a mouse and keyboard, or even a controller with buttons). My user design will show how mobile strategy is the future of challenging, yet rewarding mobile gaming. Empowering the users by utilizing every inch of screen is the key foundation to building a successful mobile RTS interface.
@@ -80,17 +80,17 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\subsection{Minimap}
 	The Minimap Interface was designed to overcome the inefficiency that is proven by Fitts' Law. Since the target of the minimap is too small, some mobile RTS's have attempted to overcome that by drawing a bigger minimap in the top-right corner of the screen. Nevertheless, an issue results from that approach: less room for the user to select objects on the screen, and even to issue movement commands. On top of that, minimap control suffers from the same Fitts' Law issue that was originally trying to be fixed. The selection area for moving the camera view around the map is small, which makes it difficult for accurate camera placement. This is why I chose to add an expandable map interface: it makes the minimap target huge, while at the same time preserving all the action happening on-screen. The advantage of this approach is that it is dynamic as well; in the heat of battle, the user will not have the minimap getting in the way. This will allow the user to be immersed in the action on-screen, while still being alerted (or ``pinged,'' in my interface design language) to other events happening on the smaller minimap.
 	\subsection{Unit Movement}
-	For unit movement, the goal setting out was to limit the amount of taps that the user would need to memorize, and provide feedback of what the user's commands were causing to occur. The hold-tap input made sense for chaining commands because it would both provide feedback to the user by drawing a next-movement line and preventing interference from user modification to movement patters. If a user 
+	For unit movement, the goal setting out was to limit the amount of taps that the user would need to memorize, and provide feedback of what the user's commands were causing to occur. The hold-tap input made sense for chaining commands because it would both provide feedback to the user by drawing a next-movement line and preventing interference from user modification to movement patters. If a user can see visible navigation as to where their units are going, it can only enhance the experience. Keeping the tap commands simple will limit the errors a user will make; there is no specific halt command, but by using a quick move by tapping once, it will cause units to stop when they reach your last tap. This sequence design will help users to give complex commands, while making it easy to cancel if need be.
 	\subsection{Camera Control}
-	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of a webpage in a mobile browser. \\
-	\indent In Starfront, users are provided with a slider on the right side of the interface, which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture.
+	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of common map applications on mobile operating systems. \\
+	\indent In Starfront, users are provided with a slider on the left side of the interface (as seen in Figure 5), which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture.
 	\begin{figure}[h]
 	\begin{center}
 	\includegraphics[height = 2.5in]{iphone-two-finger-pinch}
 	\caption{An example of a two-finger pinch gesture common on many mobile operating systems.}
 	\end{center}
 	\end{figure} \\
-	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
+	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in mobile map applications, two-finger pinch will zoom in and zoom out, respectively. Two-finger radial movement will cause the direction of the map to change. In my implementation of an RTS interface, I want to match this paradigm. This is a small way to reduce the user's cognitive load, and have the commands they are issuing make sense. If other applications in the operating system utilize these guidelines, then this interface should be no different.
 	\subsection{Building Management \& Interface}
 	For mobile devices, I believe that cluterring up the already limited screen space will only make the user more error-prone as they execute actions. I believe that utilizing my building management interface will limit that error-prone behavior, while providing context to their current action. When a user selects a building, the commands fan-out around the building in a pie-menu fashion, showing the user their selection while displaying actions around it. This provides context to the user in the form of direct manipulation: the user wants to build something, so as they tap a building command options naturally form out of that tap. It provides the distinctive and clear set-up of a menu mental model as well: distinctive and clear choices always are mapped from left to right (research = left, units = right). 
 \section{Usability Analysis}
